--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@wdio/jasmine-framework": "^7.5.3",
     "@wdio/local-runner": "^7.5.7",
     "@wdio/spec-reporter": "^7.5.7",
+    "@wdio/sync": "^7.5.7",
     "chromedriver": "^90.0.0",
     "wdio-chromedriver-service": "^7.0.0"
   }
