--- a/package.json
+++ b/package.json
@@ -4,22 +4,25 @@
   "description": "Create a Login and a Register form and validate their requirements",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx wdio run ./wdio.conf.js --spec loginTest.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/martinasierra/rr-week-09.git"
+    "url": "git+https://github.com/martinasierra/rr-week-09-10.git"
   },
   "author": "MS",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/martinasierra/rr-week-09/issues"
+    "url": "https://github.com/martinasierra/rr-week-09-10/issues"
   },
-  "homepage": "https://github.com/martinasierra/rr-week-09#readme",
+  "homepage": "https://github.com/martinasierra/rr-week-09-10#readme",
   "dependencies": {
     "@wdio/cli": "^7.5.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.1",
+    "@babel/register": "^7.13.16",
     "@wdio/jasmine-framework": "^7.5.3",
     "@wdio/local-runner": "^7.5.7",
     "@wdio/spec-reporter": "^7.5.7",
