--- a/package.json
+++ b/package.json
@@ -4,18 +4,14 @@
   "description": "Create a Login and a Register form and validate their requirements",
   "main": "index.js",
   "scripts": {
-    "test": "npx wdio run ./wdio.conf.js --spec loginTest.js"
+    "test": "npx wdio run ./wdio.conf.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/martinasierra/rr-week-09-10.git"
+    "url": "\u001b[D\u001b[D\u001b[D\u001b[D\u001b[Ds-09-10.git)"
   },
-  "author": "MS",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/martinasierra/rr-week-09-10/issues"
-  },
-  "homepage": "https://github.com/martinasierra/rr-week-09-10#readme",
   "dependencies": {
     "@wdio/cli": "^7.5.7"
   },
